test/integration/bad/new/bad_constrained_type_in_fn copy.stan
functions{
  void foo(array[] simplex x){
    print(x);
  }
}
